--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^13.1.4",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -16,6 +17,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prettier": "2.8.3",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
