--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.4",
+    "framer-motion": "^8.5.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
