--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup SSH
-        uses: shimat/setup-ssh-action@v1
+        uses: shimataro/ssh-key-action@v2
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
