--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,16 +21,21 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           config: ${{ secrets.CONFIG }} # ssh_config; optional
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-
-      - name: SSH into VPS
-        run: |
-          ssh -o "StrictHostKeyChecking no" -i ${{ secrets.SSH_KEY }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_IP }}
-          if [ -d "shirt-designer" ]; then
-            cd shirt-designer
-          else
-            git clone git@github.com:chadwithz/shirt-designer.git
-            cd shirt-designer
-          fi
+      
+      - name: Check if project exist
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: |
+            if [ -d "shirt-designer" ]; then
+              cd shirt-designer
+            else
+              git clone git@github.com:chadwithz/shirt-designer.git
+              cd shirt-designer
+            fi
+          host: ${{ secrets.SSH_IP }}
+          username: garygrossgarten
+          passphrase: ${{ secrets.PASSPHRASE }}
+          privateKey: ${{ secrets.PRIVATE_KEY}}
 
       - name: Build project
         run: |
