--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,21 +21,24 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           config: ${{ secrets.CONFIG }} # ssh_config; optional
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      
+
       - name: Check if project exist
-        uses: garygrossgarten/github-action-ssh@release
+        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+        env:
+          WELCOME: "ssh scp ssh pipelines"
+          LASTSSH: "Doing something after copying"
         with:
-          command: |
+          host: ${{ secrets.SSH_IP }}
+          user: ${{ secrets.SSH_USER }}
+          pass: ${{ secrets.PASSPHRASE }}
+          connect_timeout: 10s
+          first_ssh: |
             if [ -d "shirt-designer" ]; then
               cd shirt-designer
             else
               git clone git@github.com:chadwithz/shirt-designer.git
               cd shirt-designer
             fi
-          host: ${{ secrets.SSH_IP }}
-          username: ${{ secrets.SSH_USER }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          privateKey: ${{ secrets.PRIVATE_KEY}}
 
       - name: Build project
         run: |
