--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,12 +33,12 @@ jobs:
           pass: ${{ secrets.PASSPHRASE }}
           connect_timeout: 10s
           first_ssh: |
-            if [ -d "shirt-designer" ]; then
+            bash -c "if [ -d "shirt-designer" ]; then
               cd shirt-designer
             else
               git clone git@github.com:chadwithz/shirt-designer.git
               cd shirt-designer
-            fi
+            fi"
 
       - name: Build project
         run: |
