--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,25 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Setup SSH
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_KEY }}
-          name: id_rsa # optional
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
 
-      - name: Check if project exist
-        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
-        env:
-          WELCOME: "ssh scp ssh pipelines"
-          LASTSSH: "Doing something after copying"
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SSH_IP }}
-          user: ${{ secrets.SSH_USER }}
-          pass: ${{ secrets.PASSPHRASE }}
-          connect_timeout: 10s
-          first_ssh: curl https://raw.githubusercontent.com/chadwithz/shirt-designer/development/check-project.sh | bash
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.PASSPHRASE }}
+          script: curl https://raw.githubusercontent.com/chadwithz/shirt-designer/development/check-project.sh | bash
