--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.8.1"
   },
