--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "~/*": ["./public/*"]
+      "*": ["./src/*"]
     },
     "incremental": true
   },
